Use screen bounds in AXWindowObjWrapper

Bug: 816828
Test: verify that touch typing works again in ChromeVox
Change-Id: I56e273aeaf225cf38d53efcc7ffff3eca6cf5387
Reviewed-on: https://chromium-review.googlesource.com/940814
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540054}